--- a/src/style/form-fields.scss
+++ b/src/style/form-fields.scss
@@ -1,3 +1,4 @@
+//INPUT
 .form-input {
     display: grid;
     grid-template-rows: 1fr;
@@ -34,5 +35,22 @@
         padding-left: 2rem;
         font-size: 1.6rem;
         font-weight: 500;
+    }
+}
+
+//Button
+
+.form-button {
+    &__button {
+        height: 4rem;
+        width: 21.6rem;
+        border-radius: 2rem;
+        background-color: $red-ba;
+
+        color:white;
+        font-size: 2.2rem;
+        font-weight: 500;
+        line-height: 2.8rem;
+        text-align: center;
     }
 }
