--- a/src/style/signin.scss
+++ b/src/style/signin.scss
@@ -8,13 +8,24 @@
     justify-items: center;
     &__title {
         width: 100%;
+        margin-top: 6.6rem;
     }
 
+// NOT WORKING NOT WORKING NOT WORKING
     &__email {
-
+        margin-top: 7.7rem;
     }
 
     &__password {
+        margin-top: 4rem;
+    }
+// NOT WORKING NOT WORKING NOT WORKING
 
+    &__login {
+       margin-top: 8.8rem;
+    }
+
+    &__text-links {
+        margin-top: 5.2rem
     }
 }
