--- a/src/style/tab-nav.scss
+++ b/src/style/tab-nav.scss
@@ -6,7 +6,7 @@
         grid-row: tabs-s/tabs-e;
         display: grid;
 
-        grid-template-rows: 1fr;
+        grid-template-rows: [s] 1fr [m] 1fr 1fr [e];
         grid-template-columns: repeat(auto-fill, 1fr);
         grid-auto-flow: column;
         justify-items: center;
@@ -18,7 +18,8 @@
     }
 
     &__tab {
-        
+        grid-row: m/e;
+        height: 100%;
     }
 }
 
@@ -36,7 +37,13 @@
         text-align: center;
         width: 9rem;
         // padding-bottom: 2rem;
-        // border-bottom: 1px solid $color-red-BA;
-        
+        border-bottom: 2px solid transparent;
+
+        cursor: pointer;
+    }
+
+    &__active {
+        color: $color-red-BA;
+        border-bottom: 2px solid $color-red-BA;
     }
 }
