styled nesletter latest and applied row gaps to the newsletter grid

--- a/src/style/newsletter-archive.scss
+++ b/src/style/newsletter-archive.scss
@@ -23,7 +23,8 @@
 .archive-items {
     display: grid;
     grid-row-gap: 1.6rem;
-    grid-template-rows: repeat(auto-fit, 1fr);
+    grid-template-rows: repeat(auto-fill, 1fr);
+    align-content: start;
 
     &__item {
 
