--- a/src/style/newsletter-latest.scss
+++ b/src/style/newsletter-latest.scss
@@ -6,12 +6,20 @@
     grid-template-rows: [s] 258px [m] 405px [e];
     grid-template-columns: [s] 1fr [e];
 
+    border: 1px solid $color-gray-E6;
+    border-radius: .5rem;
+
     & > * {
         grid-column: s/e;
     }
 
     &__title {
-        grid-row: s/m
+        grid-row: s/m;
+        color: white;
+        font-size: 4rem;
+        font-weight: 500;
+        line-height: 5rem;
+        text-align: center;
     }
 
     &__image {
@@ -28,7 +36,9 @@
     &__body {
         grid-row: m/e;
         p {
-
+            margin: 6.3rem 6.05rem;
+            line-height: 2rem;
+            font-size: 2.2rem;
         }
     }
 }
