created and placed add newsletter button newsletter grid

--- a/src/style/newsletter-archive.scss
+++ b/src/style/newsletter-archive.scss
@@ -1,9 +1,11 @@
 .newsletter-archive {
-    grid-row: archive-s;
+    margin-top: 3.85rem;
+
+    grid-row: archive-s/archive-e;
     grid-column: archive-s/archive-e;
 
     display: grid;
-    grid-template-rows: [title-s] 2.7rem [title-e items-s] 1fr [items-e];
+    grid-template-rows: [title-s] 2.7rem [title-e items-s] 1fr [items-e]; 
 
     &__title {
         color: $color-red-BA;
@@ -14,41 +16,32 @@
         border-bottom: .1rem solid $color-gray-E6;
         padding-bottom: .4rem;
     }
-
-    &__items {
-
-    }
 }
+
 
 .archive-items {
-    display: grid;
-    grid-row-gap: 1.6rem;
-    grid-template-rows: repeat(auto-fill, 1fr);
-    align-content: start;
-
-    &__item {
-
-    }
-}
-
-.archive-item {
     margin-top: 1.6rem;
     display: grid;
     grid-row-gap: 1.6rem;
-    grid-row-gap: 3px;
+    grid-template-rows: repeat(auto-fit, 1fr);
+    align-content: start;
+}
 
+.archive-item {
+
+    display: grid;
+    grid-row-gap: 3px;
 
     &__title {
         font-size: 1.4rem;
         line-height: 1.7rem;
 
+        transition: all .2s ease;
         &:hover {
             font-size: 1.6rem;
-            font-weight: bold;
-            transition: all .2s ease;
+            font-weight: 500;
         }
     }
-
     &__date {
         color: $color-red-BA;
         font-family: $font-encode-cond;
