--- a/src/style/newsletter-new-form.scss
+++ b/src/style/newsletter-new-form.scss
@@ -1,36 +1,24 @@
-.sign-up {
-    grid-row: content-s/content-e;
-    grid-column: content-s/content-e;
-}
-
-.sign-up-form {
+.new-newsletter-form {
     display: grid;
-    grid-template-columns: [s] 1fr [input-s] 629px [input-e] 1fr [e];
-    justify-items: center;
+    grid-template-columns: [s input-s] 1020px [input-e] 1fr [e];
+
     &__title {
         width: 100%;
         margin-top: 6.6rem;
         grid-column: s/e;
     }
-
-    &__fullname {
+    &__email {
         margin-top: 7.7rem;
         grid-column: input-s/input-e;
     }
-
-    &__password,
-    &__unit,
-    &__email {
+    &__password {
         margin-top: 4rem;
         grid-column: input-s/input-e;
-
     }
-
-    &__create-account {
-       margin-top: 8.8rem;
-       grid-column: input-s/input-e;
+    &__login {
+        margin-top: 8.8rem;
+        grid-column: input-s/input-e;
     }
-
     &__text-links {
         margin-top: 5.2rem;
         grid-column: input-s/input-e;
