--- a/src/style/form-fields.scss
+++ b/src/style/form-fields.scss
@@ -1,5 +1,6 @@
 // INPUT
-.form-input {
+.form-input,
+.form-textarea {
     display: grid;
     grid-template-rows: 1fr;
     grid-template-columns: 3fr 10fr;
@@ -19,7 +20,8 @@
     }
 }
 
-.form-input {
+.form-input,
+.form-textarea {
     &__title {
         color: $color-red-BA;
         font-size: 1.8rem;
@@ -35,6 +37,17 @@
         padding-left: 2rem;
         font-size: 1.6rem;
         font-weight: 500;
+    }
+}
+
+.form-textarea {
+    &__title {
+        align-self: start;
+    }
+    &__input {
+        resize: none;
+        height: 35.5rem;
+        padding-top: .4rem;
     }
 }
 
