need to finish How to Add Custom Cases to a Component video 08:46 timestamp

--- a/src/style/form-fields.scss
+++ b/src/style/form-fields.scss
@@ -84,7 +84,7 @@
     }
 
     &__danger {
-        border: none;
+        border: 1px solid $color-gray-4D;
         color: white;
         background-color: $color-red-BA;
     }
