--- a/src/style/form-fields.scss
+++ b/src/style/form-fields.scss
@@ -1,4 +1,5 @@
 // INPUT
+
 .form-input,
 .form-textarea {
     display: grid;
@@ -47,11 +48,24 @@
     &__input {
         resize: none;
         height: 35.5rem;
-        padding-top: .4rem;
+        padding-top: 1rem;
     }
 }
 
 // BUTTON
+
+.form-button,
+.form-button-small {
+    &__button {
+        transition: all .2s ease;
+        &:focus {
+            outline: none;
+        }
+        &:active {
+            transform: scale(0.95) translateY(2.05px);
+        }
+    }
+}
 
 .form-button {
     &__button {
@@ -71,16 +85,16 @@
 .form-button-small {
 
     &__button {
-        width: 13rem;
-
         border-radius: 1.6rem;
         border: 1px solid $color-gray-4D;
+        width: 7.4rem;
         height: 2.4rem;
     
         font-size: 1.4rem;
         line-height: 1.7rem;
-    
         text-align: center;
+    
+        width: 13rem;
     }
 
     &__danger {
