--- a/src/style/form-fields.scss
+++ b/src/style/form-fields.scss
@@ -21,13 +21,9 @@
     }
 }
 
-.form-input,
-.form-textarea {
+.form-input {
     &__title {
-        color: $color-red-BA;
-        font-size: 1.8rem;
-        font-weight: 500;
-        line-height: 2.3rem;
+        @include red-title;
     }
     &__input {
         height: 4rem;
@@ -44,6 +40,7 @@
 .form-textarea {
     &__title {
         align-self: start;
+        @include red-title;
     }
     &__input {
         resize: none;
@@ -101,5 +98,22 @@
         border: 1px solid $color-red-BA;
         color: white;
         background-color: $color-red-BA;
+    }
+}
+
+// IMAGE
+.form-image {
+    
+    display: flex;
+    flex-direction: column;
+    &__title {
+        @include red-title;
+        margin-bottom: 2rem;
+    }
+
+    &__image {
+        width: 16rem;
+        height: 13.7rem;
+        border: none;
     }
 }
